20010628:
- added Option -d to use blocksize of output device
  for write (was default behaviour, but isn't needed
  in most cases and slows data transfer down)
- changed statusline (proposal by Dan Hollis)
- minor bugfix for handling read errors (size of
  writable block fragment is now set correctly)
  [probably nobody ever cares anyway]
- updates for experimental networking (configure)

20010626:
- bugfix: mbuffer didn't work anymore with pipes due
  to incorrect set Outsize (0)

20010624:
- added experimental networking code
- bugfix for multivolume-code which might have caused
  problems on devices which have a size which is
  no multiple of Blocksize
- docu update

20010622:
- architecture switches for x86 changed to match gcc-3.0
- 64 Bit updates for huge data amounts
- docu update

20010621:
- bugfix for option -T

20010619:
- multi-volume support is now enabled by default
- minor docu updates
- fix for configure to work on Solaris 5.1

20010528:
- semantic fix for option -p to be consistend with buffer
- bugfix: for dropped blocks in multi-volumen code
- fix for lockup if SIG_BRK is sent during a volume request

20010518:
- Bugfix: multi volume output now should work
	  (bugreport by Dan Hollis)
- docu update
- added some extra checks after running lint...

20010515:
- Docu update concerning usage of multi volume support
- multi volume options consistency checking added

20010509:
- summary is now also displayed upon break and terminate
- Bugfix: summary overflow
- experimental feature: input of multiple volumes

20010507:
- status messages are now printed to the terminal not to stderr
- Bugfix: for output blocksize code
- documentation update
- new: summary information
- experimental feature: output to multiple volumes

20010426:
- Bugfix: fixed sleep, which limited the performace to 1MB/s
          (credits go to Padraig Brady <padraig@antefacto.com>)
- Bugfix: fixed incorrect display of total datatransfer for >2GB